--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: null
-title: Jekyll Theme - Home Page - Massively
-description: Every great website starts with a great homepage. The homepage tells your viewers what your site is all about and gives your viewers a place to come back to.
+title: ZHUORU'S WONDERLAND
+description: Zhuoru's previous projects
 sitemap:
     priority: 1.0
     lastmod: 2017-11-02
