--- a/index.html
+++ b/index.html
@@ -23,20 +23,16 @@ sitemap:
 	<body class="is-loading">
 
 		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+			<!-- <div id="wrapper" class="fade-in"> -->
 
 				<!-- Intro -->
-					<div id="intro">
+					<!-- <div id="intro">
             <h1>{{site.title}}</h1>
 						<h2>Robotics Software Engineer</h2>
-						<!--
-						<p>Massively is an HTML5 website theme designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>. Jekyll integration by <a href="https://somiibo.com">Somiibo</a></p>
-						-->
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
-					</div>
+					</div> -->
 
 				<!-- Header -->
 					<header id="header">
@@ -72,9 +68,7 @@ sitemap:
 							</section>
 
 						<!-- Footer -->
-							<footer>
 
-							</footer>
 
 					</div>
 
